# veda-exim

./: README.md  build.sh
v-exim/: Cargo.toml
v-exim/src/: configuration.rs  exim.rs
veda-exim-inquire/: Cargo.toml
veda-exim-inquire/src/: main.rs
veda-exim-respond/: Cargo.toml
veda-exim-respond/src/: main.rs
veda-extractor/: Cargo.toml
veda-extractor/src/: main.rs  v8_script.rs
