[package]
name = "veda-exim-inquire"
version = "0.1.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2021"

[[bin]]
name = "veda-exim-inquire"
path = "src/main.rs"

[dependencies]
log = "0.4"

v_queue = "=0.1.9"

v_common = { package = "v-common", version = "=0.1.91" }
#v_common = { package = "v-common", path = "../../../v-common" }

v_exim = { path = "../v-exim" }
