[package]
name = "veda-exim-respond"
version = "0.1.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2018"

[[bin]]
name = "veda-exim-respond"
path = "src/main.rs"

[dependencies]
log = "0.4"
serde_derive = "1.0"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

v_queue = "0.1"

v_module = { package = "v-common-module", version = "0.1.23" }

v_exim = { path = "../v-exim" }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
