[package]
name = "veda-exim-respond"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix-web-static-files = "3.0.5"
actix-multipart = "0.3.0"
async-std = "1.8.0"
futures = "0.3.5"

log = "0.4"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusty_tarantool = "0.2.10"

v_queue = "=0.2.4"
v_common = { package = "v-common", version = "=0.4.35" }
#v_common = { package = "v-common", path = "../../../v-common" }
v_exim = { path = "../v-exim" }
