[package]
name = "veda-extractor"
version = "0.1.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2018"

[[bin]]
name = "veda-extractor"
path = "src/main.rs"

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
rusty_v8 = "0.16.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "^1.0"

v_queue = "0.1"
v_onto = { package = "v-common-onto", version = "0.1.1" }
v_api = { package = "v-common-api", version = "0.1.2" }
v_storage = { package = "v-common-storage", version = "0.1.2" }
v_search = { package = "v-common-search", version = "0.1.2" }
v_module = { package = "v-common-module", version = "0.1.5" }
v_ft_xapian = { package = "v-common-ft-xapian", version = "0.1.3" }
v_v8 = { package = "v-common-v8", version = "0.1.3" }

v_exim = { path = "../v-exim" }
