[package]
name = "veda-extractor"
version = "0.1.0"
authors = ["Valeriy Bushenev <ValeriyBushenev@gmail.com>"]
edition = "2021"

[[bin]]
name = "veda-extractor"
path = "src/main.rs"

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "^1.0"

v_queue = "=0.1.9"


v_v8 = { package = "v-common-v8", version = "=0.1.83" }

v_exim = { path = "../v-exim" }
